debug lock file
Signed-off-by: Mitchell <mitch_dz@hotmail.com>

--- a/.github/workflows/package_source_diff.yml
+++ b/.github/workflows/package_source_diff.yml
@@ -119,6 +119,7 @@ jobs:
         run: |
           chmod +x scripts/generate_tpls_lock.sh
           ./scripts/generate_tpls_lock.sh tpls_commits.lock
+          cat tpls_commits.lock
           wc -l tpls_commits.lock || true
 
       - name: Set up Docker Buildx
