--- a/.github/workflows/package_source_diff.yml
+++ b/.github/workflows/package_source_diff.yml
@@ -125,6 +125,14 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Log in to the container registry
+        if: inputs.environment && vars.registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ vars.registry }}
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
+
       - name: Build source image
         id: build
         uses: docker/build-push-action@v5
