--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,15 @@ if (NOT DEFINED CUDAQ_ENABLE_PASQAL_BACKEND)
   set(CUDAQ_ENABLE_PASQAL_BACKEND ON CACHE BOOL "Enable building the Pasqal target.")
 endif()
 
+# Enable Pasqal QRMI connector by default on Linux.
+if (NOT DEFINED CUDAQ_ENABLE_PASQAL_QRMI_CONNECTOR)
+  if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
+    set(CUDAQ_ENABLE_PASQAL_QRMI_CONNECTOR ON CACHE BOOL "Enable building the Pasqal QRMI connector.")
+  else()
+    set(CUDAQ_ENABLE_PASQAL_QRMI_CONNECTOR OFF CACHE BOOL "Enable building the Pasqal QRMI connector.")
+  endif()
+endif()
+
 # Enable Quantum Circuits, Inc. (QCI) target by default.
 if (NOT DEFINED CUDAQ_ENABLE_QCI_BACKEND)
   set(CUDAQ_ENABLE_QCI_BACKEND ON CACHE BOOL "Enable building the Quantum Circuits, Inc. target.")
