--- a/runtime/cudaq/platform/pasqal/pasqal.yml
+++ b/runtime/cudaq/platform/pasqal/pasqal.yml
@@ -25,4 +25,4 @@ target-arguments:
     required: false
     type: string
     platform-arg: machine
-    help-string: "Specify the Pasqal machine to target, FRESNEL to target QPU and EMU_MPS to run on a MPS emulator."
+    help-string: "Specify Pasqal execution mode or machine. Use qrmi to route via QRMI, or use direct Pasqal machines like FRESNEL / EMU_MPS / EMU_FREE."
