retain build scripts
Signed-off-by: Mitchell <mitch_dz@hotmail.com>

--- a/.github/workflows/package_source_diff.yml
+++ b/.github/workflows/package_source_diff.yml
@@ -154,6 +154,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ github.token }}
 
+      # TODO: push to NGC if target image is from NGC
       - name: Tag and push to GHCR
         id: push
         run: |
