update workflow to push to NGC
Signed-off-by: Mitchell <mitch_dz@hotmail.com>

--- a/.github/workflows/package_source_diff.yml
+++ b/.github/workflows/package_source_diff.yml
@@ -25,14 +25,13 @@
 # nvcr.io/nvidia/nightly/cuda-quantum-src:cu13-latest.
 
 on:
-  push: #TODO: remove on push
   workflow_dispatch:
     inputs:
-      push_image:
+      push_to_NGC:
         required: false
         type: boolean
-        default: true # TODO: remove default true
-        description: 'Push the built source image to GHCR (requires permissions).'
+        default: false
+        description: 'Push the built source image to NGC, otherwise push to GHCR.'
       environment:
         required: false
         type: string
@@ -148,22 +147,36 @@ jobs:
           push: false
 
       - name: Log in to GitHub CR
+        if: github.event.inputs.push_to_NGC != 'true'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ github.token }}
 
-      # TODO: push to NGC if target image is from NGC
-      - name: Tag and push to GHCR
+      - name: Log in to NGC
+        if: github.event.inputs.push_to_NGC == 'true'
+        uses: docker/login-action@v3
+        with:
+          registry: nvcr.io
+          username: '$oauthtoken'
+          password: ${{ secrets.NGC_CREDENTIALS }}
+
+      - name: Tag and push to GHCR or NGC
         id: push
         run: |
           docker load --input /tmp/package-sources.tar
           cuda_major=$(echo "${{ matrix.cuda }}" | cut -d. -f1)
           target_image="nvcr.io/nvidia/nightly/cuda-quantum:cu${cuda_major}-latest"
           tag_suffix="${target_image##*:}"
-          owner_lower=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          tag="ghcr.io/${owner_lower}/cuda-quantum-src:${tag_suffix}"
+          if [ "${{ github.event.inputs.push_to_NGC }}" = "true" ]; then
+            # Derive push destination from target_image: .../cuda-quantum:tag -> .../cuda-quantum-src:tag
+            repo_part="${target_image%:*}"
+            tag="${repo_part}-src:${tag_suffix}"
+          else
+            owner_lower=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+            tag="ghcr.io/${owner_lower}/cuda-quantum-src:${tag_suffix}"
+          fi
           docker tag package-sources:latest "$tag"
           docker push "$tag"
           echo "image_tag=$tag" | tee -a $GITHUB_OUTPUT
