--- a/unittests/backends/scaleway/ScalewayStartServerAndTest.sh.in
+++ b/unittests/backends/scaleway/ScalewayStartServerAndTest.sh.in
@@ -10,8 +10,8 @@
 
 @Python_EXECUTABLE@ -c "import qio" 2> /dev/null
 if [ $? -ne 0 ]; then
-    echo "qio is not installed. It is required for testing Scaleway integration. Please install it using pip install qio. Skipping Scaleway tests."
-    exit 77
+    @Python_EXECUTABLE@ -m pip install qio~=0.1.31
+    echo "qio is not installed. Installing it..."
 fi
 
 
