--- a/.github/workflows/package_source_diff.yml
+++ b/.github/workflows/package_source_diff.yml
@@ -7,22 +7,13 @@
 # ============================================================================ #
 #
 # Workflow: diff apt and pip packages between a base and target image, then
-# build an Ubuntu 24.04 image containing source code for all added packages.
+# build a source image containing source code for all added packages.
 #
-# The target image is assumed to be built FROM the base image. This workflow
-# computes the set of apt and pip packages present in the target but not in
-# the base, then produces a new image (based on ubuntu:24.04) that contains
-# the source code for those packages under /sources (apt under /sources/apt,
-# pip sdists under /sources/pip, and repo tpls/ under /sources/tpls).
-#
-# base_image and target_image are expected to be multi-arch manifest lists.
-#
-# This automatically pushes to a similar location as the target image. For example,
-# if target_image is: 
-# nvcr.io/nvidia/nightly/cuda-quantum:cu13-latest
-# then the built
-# source image will be pushed to:
-# nvcr.io/nvidia/nightly/cuda-quantum-src:cu13-latest.
+# Inputs:
+#   push_to_NGC: boolean, default false
+#     Push the built source image to NGC, otherwise push to GHCR.
+#   environment: string, no default
+#     The environment to build the source image for.
 
 on:
   workflow_dispatch:
@@ -100,6 +91,9 @@ jobs:
     permissions:
       contents: read
       packages: write
+
+    environment:
+      name: ${{ inputs.environment || 'default' }}
 
     steps:
       - name: Checkout repository
