rename package_source_diff -> build_package_source
Signed-off-by: Mitchell <mitch_dz@hotmail.com>

--- a/.github/workflows/build_package_sources.yml
+++ b/.github/workflows/build_package_sources.yml
@@ -27,7 +27,7 @@ on:
         required: false
         type: string
 
-name: Package source diff
+name: Build package sources
 
 jobs:
   diff-packages:
