--- a/unittests/backends/scaleway/ScalewayStartServerAndTest.sh.in
+++ b/unittests/backends/scaleway/ScalewayStartServerAndTest.sh.in
@@ -8,11 +8,11 @@
 # the terms of the Apache License 2.0 which accompanies this distribution.     #
 # ============================================================================ #
 
-# Check and install qio package for mock server.
+# Check qio package for mock server.
 @Python_EXECUTABLE@ -c "import qio" 2> /dev/null
 if [ $? -ne 0 ]; then
-    @Python_EXECUTABLE@ -m pip install qio~=0.1.31
-    echo "qio is not installed. Installing it..."
+    echo "qio is not installed. It is required for testing Scaleway integration. Please install it using pip install qio. Skipping Scaleway tests."
+    exit 77
 fi
 
 
