fix(scaleway): fix review

--- a/runtime/cudaq/platform/default/rest/helpers/scaleway/CMakeLists.txt
+++ b/runtime/cudaq/platform/default/rest/helpers/scaleway/CMakeLists.txt
@@ -5,30 +5,27 @@
 # This source code and the accompanying materials are made available under     #
 # the terms of the Apache License 2.0 which accompanies this distribution.     #
 # ============================================================================ #
+set(SCALEWAY_SOURCES
+  qio/Compression.cpp
+  qio/Base64.cpp
+  qio/QuantumProgram.cpp
+  qio/QuantumProgramResult.cpp
+  qio/QuantumComputationParameters.cpp
+  qio/QuantumComputationModel.cpp
+  qaas/V1Alpha1Client.cpp
+  ScalewayServerHelper.cpp
+)
+
 target_sources(cudaq-rest-qpu
               PRIVATE
-              qio/Compression.cpp
-              qio/Base64.cpp
-              qio/QuantumProgram.cpp
-              qio/QuantumProgramResult.cpp
-              qio/QuantumComputationParameters.cpp
-              qio/QuantumComputationModel.cpp
-              qaas/V1Alpha1Client.cpp
-              ScalewayServerHelper.cpp
+              SCALEWAY_SOURCES
 )
 
 add_target_config(scaleway)
 
 add_library(cudaq-serverhelper-scaleway
             SHARED
-            qio/Compression.cpp
-            qio/Base64.cpp
-            qio/QuantumProgram.cpp
-            qio/QuantumProgramResult.cpp
-            qio/QuantumComputationParameters.cpp
-            qio/QuantumComputationModel.cpp
-            qaas/V1Alpha1Client.cpp
-            ScalewayServerHelper.cpp
+            SCALEWAY_SOURCES
 )
 
 target_link_libraries(cudaq-serverhelper-scaleway
