--- a/runtime/cudaq/platform/default/rest/helpers/scaleway/CMakeLists.txt
+++ b/runtime/cudaq/platform/default/rest/helpers/scaleway/CMakeLists.txt
@@ -5,6 +5,7 @@
 # This source code and the accompanying materials are made available under     #
 # the terms of the Apache License 2.0 which accompanies this distribution.     #
 # ============================================================================ #
+
 set(SCALEWAY_SOURCES
   qio/Compression.cpp
   qio/Base64.cpp
@@ -18,14 +19,14 @@ set(SCALEWAY_SOURCES
 
 target_sources(cudaq-rest-qpu
               PRIVATE
-              SCALEWAY_SOURCES
+              ${SCALEWAY_SOURCES}
 )
 
 add_target_config(scaleway)
 
 add_library(cudaq-serverhelper-scaleway
             SHARED
-            SCALEWAY_SOURCES
+            ${SCALEWAY_SOURCES}
 )
 
 target_link_libraries(cudaq-serverhelper-scaleway
