--- a/.github/workflows/realtime_ci.yml
+++ b/.github/workflows/realtime_ci.yml
@@ -52,8 +52,8 @@ jobs:
             # Build 
             apt update && apt install -y --no-install-recommends cmake git
             mkdir -p build && cd build
-            cmake .. -DCMAKE_BUILD_TYPE=Release -DCUDAQ_REALTIME_BUILD_TESTS=ON 
-            make -j$(nproc)
+            cmake .. -DCMAKE_BUILD_TYPE=Release -DCUDAQ_REALTIME_BUILD_TESTS=ON -DCMAKE_INSTALL_PREFIX=/installer
+            make -j$(nproc) install
 
       - name: 'Tar files'
         run: cd ${{ github.workspace }}/realtime/build && tar czf ${{ github.workspace }}/build_artifacts.tgz *
@@ -63,6 +63,14 @@ jobs:
         with:
           name: cuda-quantum-realtime-binaries-${{ matrix.platform }}-cu${{ matrix.cuda_version }}
           path: build_artifacts.tgz
+          retention-days: 1
+          if-no-files-found: error
+
+      - name: Upload installer artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: cuda-quantum-realtime-installer-${{ matrix.platform }}-cu${{ matrix.cuda_version }}
+          path: /installer
           retention-days: 1
           if-no-files-found: error
 
@@ -119,27 +127,24 @@ jobs:
 
     steps:
 
-      - name: Download binary artifact
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Download installer artifact
         uses: actions/download-artifact@v4
         with:
-          name: cuda-quantum-realtime-binaries-${{ matrix.platform }}-cu${{ matrix.cuda_version }}
-          path: ./realtime_build_artifacts
-
-      - name: Extract files
-        run: mkdir -p /workspace/realtime/build && tar -xvzf ./realtime_build_artifacts/build_artifacts.tgz -C /workspace/realtime/build
+          name: cuda-quantum-realtime-installer-${{ matrix.platform }}-cu${{ matrix.cuda_version }}
+          path: /realtime_assets
 
       - name: Install tools for building installer
         run: |
-          apt update && apt install -y cmake build-essential makeself
-
-      - name: Install realtime binary
-        run: cd /workspace/realtime/build && make install
+          apt update && apt install -y makeself
 
       - name: Build installer
         shell: bash
         run: |
           cd /workspace/realtime/scripts
           # Set install prefix to match where build_installer.sh expects it
-          export CUDAQ_REALTIME_INSTALL_PREFIX=$HOME/.cudaq_realtime
+          export CUDAQ_REALTIME_INSTALL_PREFIX=/realtime_assets
           # Run installer build script
           bash build_installer.sh
