--- a/.github/workflows/realtime_ci.yml
+++ b/.github/workflows/realtime_ci.yml
@@ -143,7 +143,7 @@ jobs:
       - name: Build installer
         shell: bash
         run: |
-          cd /workspace/realtime/scripts
+          cd ${{ github.workspace }}/realtime/scripts
           # Set install prefix to match where build_installer.sh expects it
           export CUDAQ_REALTIME_INSTALL_PREFIX=/realtime_assets
           # Run installer build script
