realtime: add host dispatcher tests and external mailbox support
Add test_host_dispatcher.cu with two tests for the HOST_LOOP backend:
- Smoke test: verifies the host loop drops slots with unknown function_id
- GRAPH_LAUNCH round-trip: exercises the full C API dispatch path with a
  pinned mailbox, verifying that an RPC request is matched to a graph,
  launched via the worker pool, and produces the correct in-place response

To support this, add cudaq_dispatcher_set_mailbox() so callers can provide
a pinned (cudaHostAllocMapped) mailbox before start(). This lets graphs be
captured with the device-side mailbox pointer ahead of time—the existing
internal allocation (plain host memory) is not device-visible. The C API
falls back to internal allocation when no external mailbox is set.

Signed-off-by: Scott Thornton <wsttiger@gmail.com>

--- a/realtime/unittests/CMakeLists.txt
+++ b/realtime/unittests/CMakeLists.txt
@@ -71,6 +71,27 @@ if(CMAKE_CUDA_COMPILER)
   )
   
   message(STATUS "  - test_dispatch_kernel (GPU dispatch infrastructure)")
+
+  # Host dispatcher tests (CUDAQ_BACKEND_HOST_LOOP)
+  add_executable(test_host_dispatcher test_host_dispatcher.cu)
+  set_target_properties(test_host_dispatcher PROPERTIES
+    CUDA_SEPARABLE_COMPILATION ON
+    CUDA_STANDARD 17
+  )
+  target_include_directories(test_host_dispatcher PRIVATE
+    ${CUDAToolkit_INCLUDE_DIRS}
+    ${CUDAQ_REALTIME_INCLUDE_DIR}
+  )
+  target_link_libraries(test_host_dispatcher PRIVATE
+    GTest::gtest_main
+    CUDA::cudart
+    cudaq-realtime
+  )
+  add_dependencies(CudaqRealtimeUnitTests test_host_dispatcher)
+  gtest_discover_tests(test_host_dispatcher
+    TEST_PREFIX "test_host_dispatcher."
+  )
+  message(STATUS "  - test_host_dispatcher (host dispatcher loop)")
 endif()
 
 # ==============================================================================
