Adding installer build
Signed-off-by: Thien Nguyen <thiennguyen@nvidia.com>

--- a/.github/workflows/realtime_ci.yml
+++ b/.github/workflows/realtime_ci.yml
@@ -138,7 +138,7 @@ jobs:
 
       - name: Install tools for building installer
         run: |
-          apt update && apt install -y makeself
+          apt update && apt install -y makeself git
 
       - name: Build installer
         shell: bash
