Adding installer build
Signed-off-by: Thien Nguyen <thiennguyen@nvidia.com>

--- a/realtime/lib/CMakeLists.txt
+++ b/realtime/lib/CMakeLists.txt
@@ -11,7 +11,7 @@ include(GNUInstallDirs)
 install(DIRECTORY ${CUDAQ_REALTIME_INCLUDE_DIR}/cudaq
   COMPONENT cudaq-realtime-headers
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-  FILES_MATCHING PATTERN "*.h"
+  FILES_MATCHING PATTERN "*.h" PATTERN "*.cuh"
 )
 
 add_subdirectory(daemon)
