* Fix C++ tests by correctly setting the machine argument for mock   server
Signed-off-by: Pradnya Khalate <pkhalate@nvidia.com>

--- a/unittests/backends/scaleway/CMakeLists.txt
+++ b/unittests/backends/scaleway/CMakeLists.txt
@@ -9,7 +9,7 @@
 add_backend_unittest_executable(test_scaleway
   SOURCES ScalewayTester.cpp
   BACKEND scaleway
-  BACKEND_CONFIG "scaleway url=http://localhost:62450"
+  BACKEND_CONFIG "scaleway url=http://localhost:62450 machine=EMU-CUDAQ-FAKE"
 )
 
 configure_file(ScalewayStartServerAndTest.sh.in ScalewayStartServerAndTest.sh @ONLY)
